src/tests/parser/expr_parser/snapshots/kasl__tests__parser__expr_parser__literal_parser__parse_bool_false.snap
---
source: src/tests/parser/expr_parser/literal_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 16,
        },
        kind: GlobalConst {
            name: "bool",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 11,
                        end: 16,
                    },
                    kind: BoolLiteral(
                        false,
                    ),
                },
            ],
        },
    },
]
