src/tests/parser/expr_parser/snapshots/kasl__tests__parser__expr_parser__literal_parser__parse_bool_true.snap
---
source: src/tests/parser/expr_parser/literal_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 15,
        },
        kind: GlobalConst {
            name: "bool",
            value_type: None,
            def_val: [
                ExprToken {
                    range: Range {
                        start: 11,
                        end: 15,
                    },
                    kind: BoolLiteral(
                        true,
                    ),
                },
            ],
        },
    },
]
